chore: update program and partners

--- a/nsw/css/custom.css
+++ b/nsw/css/custom.css
@@ -360,3 +360,39 @@ ul.banner-des li {
   padding-left: 10px;
   margin-left: 20px;
 }
+
+/* partners logos */
+.row.partners-logos {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.row.partners-logos .column {
+  flex: 25%;
+  padding: 0 4px;
+}
+
+.row.partners-logos .column img {
+  margin: 8px;
+  vertical-align: middle;
+  width: 100%;
+  max-width: 140px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .row.partners-logos .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .row.partners-logos .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
